# Atelier_CMAKE

./: CMakeLists.txt
.github/workflows/: tests.yml
include/: CMakeLists.txt  calculator.h
src/: main.c
src/lib/: calculator.c
